--- a/FriendOragnizer.DataAccess/App.config
+++ b/FriendOragnizer.DataAccess/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-  <configSections>
+    <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
+    <connectionStrings>
+        <add name="FriendConnectionString"
+             connectionString="Data source.;Initial Catalog=FriendOrganizer;Integrated Security=true;"
+             providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
