--- a/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
+++ b/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FriendOrganizerDbContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
