--- a/FriendOragnizer.DataAccess/App.config
+++ b/FriendOragnizer.DataAccess/App.config
@@ -5,8 +5,8 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
     <connectionStrings>
-        <add name="FriendConnectionString"
-             connectionString="Data source.;Initial Catalog=FriendOrganizer;Integrated Security=true;"
-             providerName="System.Data.SqlClient" />
+      <add name="FriendOrganizerDb"
+          connectionString="Data Source=.;Initial Catalog=FriendOrganizer;Trusted_Connection=True;"
+          providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
