--- a/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
+++ b/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
@@ -47,6 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FriendOrganizerDbContext.cs" />
+    <Compile Include="Migrations\201711061216596_InitialDatabase.cs" />
+    <Compile Include="Migrations\201711061216596_InitialDatabase.Designer.cs">
+      <DependentUpon>201711061216596_InitialDatabase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -59,6 +63,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201711061216596_InitialDatabase.resx">
+      <DependentUpon>201711061216596_InitialDatabase.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
