--- a/FriendOrganizer.UI/App.config
+++ b/FriendOrganizer.UI/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="FriendOrganizerDb"
+         connectionString="Data Source=.;Initial Catalog=FriendOrganizer;Trusted_Connection=True;"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
