--- a/FriendOrganizer.UI/FriendOrganizer.UI.csproj
+++ b/FriendOrganizer.UI/FriendOrganizer.UI.csproj
@@ -88,6 +88,8 @@
     <Compile Include="View\NaviagtionView.xaml.cs">
       <DependentUpon>NaviagtionView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Servicies\IMessageDialogService.cs" />
+    <Compile Include="View\Servicies\MessageDialogService.cs" />
     <Compile Include="Wrapper\FriendWrapper.cs" />
     <Compile Include="Wrapper\ModelWrapper.cs" />
     <Compile Include="Wrapper\NotifyDataErrorInfoBase.cs" />
