--- a/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
+++ b/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\201711072325241_AddedProgrammingLanguage.Designer.cs">
       <DependentUpon>201711072325241_AddedProgrammingLanguage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711081432031_AddedFriendPhoneNumbers.cs" />
+    <Compile Include="Migrations\201711081432031_AddedFriendPhoneNumbers.Designer.cs">
+      <DependentUpon>201711081432031_AddedFriendPhoneNumbers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -74,6 +78,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711072325241_AddedProgrammingLanguage.resx">
       <DependentUpon>201711072325241_AddedProgrammingLanguage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711081432031_AddedFriendPhoneNumbers.resx">
+      <DependentUpon>201711081432031_AddedFriendPhoneNumbers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
