--- a/FriendOrganizer.Model/FriendOrganizer.Model.csproj
+++ b/FriendOrganizer.Model/FriendOrganizer.Model.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Friend.cs" />
+    <Compile Include="FriendPhoneNumber.cs" />
     <Compile Include="LookupItem.cs" />
     <Compile Include="ProgramminLanguage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
