--- a/FriendOrganizer.UI/FriendOrganizer.UI.csproj
+++ b/FriendOrganizer.UI/FriendOrganizer.UI.csproj
@@ -75,7 +75,7 @@
     <Compile Include="Data\Lookups\IProgramminLanguageLookupDataService.cs" />
     <Compile Include="Data\Repositries\FriendReposetory.cs" />
     <Compile Include="Data\Repositries\IFriendReposetory.cs" />
-    <Compile Include="Event\AfterFriendDeletedEvent.cs" />
+    <Compile Include="Event\AfterDetailDeletedEvent.cs" />
     <Compile Include="Event\AfterFriendSavedEvent.cs" />
     <Compile Include="Event\OpenDetialViewEvent.cs" />
     <Compile Include="StartUp\BootStrapper.cs" />
