--- a/FriendOrganizer.Model/FriendOrganizer.Model.csproj
+++ b/FriendOrganizer.Model/FriendOrganizer.Model.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Friend.cs" />
     <Compile Include="FriendPhoneNumber.cs" />
     <Compile Include="LookupItem.cs" />
+    <Compile Include="Meeting.cs" />
     <Compile Include="ProgramminLanguage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
