--- a/FriendOrganizer.UI/FriendOrganizer.UI.csproj
+++ b/FriendOrganizer.UI/FriendOrganizer.UI.csproj
@@ -77,8 +77,8 @@
     <Compile Include="Data\Repositries\GenericRepository.cs" />
     <Compile Include="Data\Repositries\IFriendReposetory.cs" />
     <Compile Include="Data\Repositries\IGenericRepository.cs" />
-    <Compile Include="Data\Repositries\IMettingRepository.cs" />
-    <Compile Include="Data\Repositries\MettingRepository.cs" />
+    <Compile Include="Data\Repositries\IMeetingRepository.cs" />
+    <Compile Include="Data\Repositries\MeetingRepository.cs" />
     <Compile Include="Event\AfterDetailDeletedEvent.cs" />
     <Compile Include="Event\AfterDetailSavedEvent.cs" />
     <Compile Include="Event\OpenDetialViewEvent.cs" />
@@ -87,6 +87,7 @@
     <Compile Include="ViewModel\FriendDetailViewModel.cs" />
     <Compile Include="ViewModel\IDetailViewModel.cs" />
     <Compile Include="ViewModel\IFriendDetailViewModel.cs" />
+    <Compile Include="ViewModel\IMeetingDetailViewModel.cs" />
     <Compile Include="ViewModel\INavigationViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\NavigationItemViewModel.cs" />
