--- a/FriendOrganizer.UI/packages.config
+++ b/FriendOrganizer.UI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Prism.Core" version="7.0.0.168-pre" targetFramework="net452" />
