--- a/FriendOrganizer.UI/FriendOrganizer.UI.csproj
+++ b/FriendOrganizer.UI/FriendOrganizer.UI.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Data\Repositries\MeetingRepository.cs" />
     <Compile Include="Event\AfterDetailDeletedEvent.cs" />
     <Compile Include="Event\AfterDetailSavedEvent.cs" />
+    <Compile Include="Event\AfterDetailClosedEvent.cs" />
     <Compile Include="Event\OpenDetialViewEvent.cs" />
     <Compile Include="StartUp\BootStrapper.cs" />
     <Compile Include="ViewModel\DetailViewModelBase.cs" />
