now syncing programmingLangues

--- a/FriendOrganizer.UI/FriendOrganizer.UI.csproj
+++ b/FriendOrganizer.UI/FriendOrganizer.UI.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Data\Repositries\IProgrammingLangueageRepository.cs" />
     <Compile Include="Data\Repositries\MeetingRepository.cs" />
     <Compile Include="Data\Repositries\ProgrammingLangueageRepository.cs" />
+    <Compile Include="Event\AfterCollectionSavedEvent.cs" />
     <Compile Include="Event\AfterDetailDeletedEvent.cs" />
     <Compile Include="Event\AfterDetailSavedEvent.cs" />
     <Compile Include="Event\AfterDetailClosedEvent.cs" />
@@ -115,7 +116,7 @@
     <Compile Include="ViewModel\MeetingDetailViewModel.cs" />
     <Compile Include="ViewModel\NavigationItemViewModel.cs" />
     <Compile Include="ViewModel\NavigationViewModel.cs" />
-    <Compile Include="ViewModel\ProgramminLangueageDetailViewModel.cs" />
+    <Compile Include="ViewModel\ProgrammingLangueageDetailViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="View\FriendDetailView.xaml.cs" />
     <Compile Include="View\MeetingDetailView.xaml.cs" />
