fucking done with this programmingLangueage shit...

--- a/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
+++ b/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Migrations\201711101317139_AddedMettings.Designer.cs">
       <DependentUpon>201711101317139_AddedMettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711102136200_FixedProblemWithProgrammingLangueage.cs" />
+    <Compile Include="Migrations\201711102136200_FixedProblemWithProgrammingLangueage.Designer.cs">
+      <DependentUpon>201711102136200_FixedProblemWithProgrammingLangueage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -88,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711101317139_AddedMettings.resx">
       <DependentUpon>201711101317139_AddedMettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711102136200_FixedProblemWithProgrammingLangueage.resx">
+      <DependentUpon>201711102136200_FixedProblemWithProgrammingLangueage.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
