--- a/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
+++ b/FriendOragnizer.DataAccess/FriendOragnizer.DataAccess.csproj
@@ -67,6 +67,10 @@
     <Compile Include="Migrations\201711102136200_FixedProblemWithProgrammingLangueage.Designer.cs">
       <DependentUpon>201711102136200_FixedProblemWithProgrammingLangueage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711102156271_AddedRowVersionToFriend.cs" />
+    <Compile Include="Migrations\201711102156271_AddedRowVersionToFriend.Designer.cs">
+      <DependentUpon>201711102156271_AddedRowVersionToFriend.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -95,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711102136200_FixedProblemWithProgrammingLangueage.resx">
       <DependentUpon>201711102136200_FixedProblemWithProgrammingLangueage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711102156271_AddedRowVersionToFriend.resx">
+      <DependentUpon>201711102156271_AddedRowVersionToFriend.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
