--- a/FriendOrganizer.UI/packages.config
+++ b/FriendOrganizer.UI/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="net452" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.6.0-alpha0184" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Prism.Core" version="7.0.0.168-pre" targetFramework="net452" />
