--- a/FriendOrganizer.UI/packages.config
+++ b/FriendOrganizer.UI/packages.config
@@ -7,6 +7,7 @@
   <package id="MahApps.Metro" version="1.6.0-alpha0184" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Prism.Core" version="7.0.0.168-pre" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
